--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
   </head>
   <body>
     <div class="background">
-      <div class="container">
+      <div class="logo-div">
         <h1 class="logo">Logo</h1>
       </div>
     </div>
     <div class="form-container">
       <div class="hero">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias
-        optio rerum amet velit blanditiis est obcaecati ipsam fugit voluptatum
-        libero, at, saepe praesentium vero dolores voluptatibus autem maiores
-        reiciendis. Architecto!
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique
+          error nulla veritatis, reiciendis exercitationem hic eligendi esse
+          magnam est laboriosam eveniet. Dolorum nam cumque asperiores dolores?
+          Amet suscipit rem error?
+        </p>
+        <p>You<span>Know</span>you want to.</p>
       </div>
-      <div class="container">
-        <form action="#" method="post">
+
+      <form action="#" method="post">
+        <div class="input-box">
           <label for="firstName">First Name</label>
           <input
             type="text"
@@ -29,6 +33,8 @@
             id="firstName"
             placeholder="First Name"
           />
+        </div>
+        <div class="input-box">
           <label for="lastName">Last name</label>
           <input
             type="text"
@@ -36,6 +42,8 @@
             name="lastName"
             placeholder="Last Name"
           />
+        </div>
+        <div class="input-box">
           <label for="email">Email Address</label>
           <input
             type="email"
@@ -43,6 +51,8 @@
             name="email"
             placeholder="Email Address"
           />
+        </div>
+        <div class="input-box">
           <label for="phoneNumber">Phone Number</label>
           <input
             type="tel"
@@ -51,6 +61,8 @@
             pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
             placeholder="Phone Number"
           />
+        </div>
+        <div class="input-box">
           <label for="password">Password</label>
           <input
             type="password"
@@ -58,6 +70,8 @@
             name="password"
             placeholder="Password"
           />
+        </div>
+        <div class="input-box">
           <label for="confirmPassword">Confirm Password</label>
           <input
             type="confirmPassword"
@@ -65,10 +79,10 @@
             name="confirmPassword"
             placeholder="Password"
           />
-        </form>
-        <button type="submit">Create Account</button>
-        <span>Already have an account? Log in</span>
-      </div>
+        </div>
+      </form>
+      <button type="submit">Create Account</button>
+      <span>Already have an account? Log in</span>
     </div>
   </body>
 </html>
