Add border shadows

--- a/index.html
+++ b/index.html
@@ -10,20 +10,18 @@
   <body>
     <div class="background">
       <div class="logo-div">
-        <h1 class="logo">Logo</h1>
+        <h1 class="logo">Hyker</h1>
       </div>
     </div>
     <div class="form-container">
       <div class="hero">
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique
-          error nulla veritatis, reiciendis exercitationem hic eligendi esse
-          magnam est laboriosam eveniet. Dolorum nam cumque asperiores dolores?
-          Amet suscipit rem error?
+          Explore the world outside, find hidden wonders while finding yourself.
+          Hyker shows you where, how, and what you need to live your best life,
+          outside.
         </p>
-        <p>You<span>Know</span>you want to.</p>
+        <p>You <i>Know</i> you want to.</p>
       </div>
-
       <form action="#" method="post">
         <div class="input-box">
           <label for="firstName">First Name</label>
