--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
     <title>Sign up form</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -23,6 +26,7 @@
         <p>You <i>Know</i> you want to.</p>
       </div>
       <form action="#" method="post">
+        <legend>Lets Do this!</legend>
         <div class="input-box">
           <label for="firstName">First Name</label>
           <input
@@ -39,6 +43,7 @@
             id="lastName"
             name="lastName"
             placeholder="Last Name"
+            autofocus
           />
         </div>
         <div class="input-box">
@@ -56,7 +61,7 @@
             type="tel"
             id="phoneNumber"
             name="phoneNumber"
-            pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
+            pattern="(?:\(\d{3}\)|\d{3})[- ]?\d{3}[- ]?\d{4}"
             placeholder="Phone Number"
           />
         </div>
@@ -67,20 +72,22 @@
             id="password"
             name="password"
             placeholder="Password"
+            class="error"
           />
         </div>
         <div class="input-box">
           <label for="confirmPassword">Confirm Password</label>
           <input
-            type="confirmPassword"
+            type="password"
             id="confirmPassword"
             name="confirmPassword"
             placeholder="Password"
+            class="error"
           />
         </div>
       </form>
-      <button type="submit">Create Account</button>
-      <span>Already have an account? Log in</span>
+      <button type="submit" id="button">Create Account</button>
+      <span>Already have an account? <a href="#">Log in</a></span>
     </div>
   </body>
 </html>
